Fix sidebar navigation alignment with long multi-line labels

--- a/frontend/css/layout/_navigation.scss
+++ b/frontend/css/layout/_navigation.scss
@@ -42,9 +42,13 @@
   }
 
   .nav-icon {
+    flex-shrink: 0;
+    align-self: flex-start;
+
     display: inline-flex;
     align-items: center;
     justify-content: center;
+
     width: 1.375rem;
     height: 1.375rem;
   }
